--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ sphinx-copybutton = "^0.5.0"
 sphinx-design = "^0.4.1"
 sphinx-togglebutton = "^0.3.2"
 pydata-sphinx-theme = "^0.13.3"
+myst-nb = [
+    {version = "0.17.2", python = "<3.9"},
+    {version = "1.1.1", python = ">=3.9"}
+]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
