--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -254,6 +254,9 @@ jobs:
   build-executables-linux:
     if: github.event.inputs.build_linux == 'true'
     runs-on: ubuntu-latest
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: "true"
+      ACTIONS_RUNNER_FORCE_ACTIONS_NODE_VERSION: node16
     container:
       image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
