--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -190,7 +190,7 @@ jobs:
         if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
         run: ./make.sh matflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }} INFO 'onefile'
-        
+
       - name: Build with pyinstaller (non-Windows, folder)
         if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
@@ -266,10 +266,10 @@ jobs:
         run: ./compress.ps1 -ExeName 'matflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir' -BuildType 'onedir'
 
       - name: Compress folder (non-windows, folder)
-        if: "!contains(matrix.os, 'windows')" 
+        if: "!contains(matrix.os, 'windows')"
         working-directory: pyinstaller
         run: ./compress.sh matflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir 'onedir'
-          
+
       - name: Upload executable artifact (file)
         uses: actions/upload-artifact@v4
         with:
@@ -285,6 +285,9 @@ jobs:
   build-executables-linux:
     runs-on: ubuntu-latest
     needs: bump-version
+    env:
+      ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: "true"
+      ACTIONS_RUNNER_FORCE_ACTIONS_NODE_VERSION: node16
     container:
       image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
@@ -379,8 +382,8 @@ jobs:
         os:
           - ubuntu-latest
           - macos-13
-          - windows-latest      
-        num_elements: 
+          - windows-latest
+        num_elements:
           - 1
           - 100
           - 10000
@@ -416,8 +419,8 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-            name: benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt
-            path: benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt
+          name: benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt
+          path: benchmark_make_workflow_${{ matrix.num_elements }}_elements-${{ runner.os }}-py-${{ matrix.python-version }}.txt
 
   make-workflow-benchmark-upload:
     needs: make-workflow-benchmark
@@ -429,19 +432,23 @@ jobs:
       - run: |
           mkdir benchmarks
       - uses: actions/download-artifact@v4
-        with: 
+        with:
           merge-multiple: true
           path: benchmarks
       - name: zip benchmark results
         run: |
           zip -r ./benchmarks.zip benchmarks
       - uses: actions/upload-artifact@v4
-        with:             
+        with:
           name: benchmarks.zip
           path: benchmarks.zip
 
   release-github-PyPI:
-    needs: [bump-version, build-executables, build-executables-linux, make-workflow-benchmark-upload]
+    needs:
+      - bump-version
+      - build-executables
+      - build-executables-linux
+      - make-workflow-benchmark-upload
     runs-on: ubuntu-latest
     outputs:
       binary_download_links: ${{ steps.get_binary_download_links.outputs.binary_download_links }}
