feat: add acceptance rate and propoal stddev parameter to subset workflows

--- a/matflow/data/workflows/subset_simulation_toy_model.yaml
+++ b/matflow/data/workflows/subset_simulation_toy_model.yaml
@@ -44,6 +44,9 @@ template_components:
         - parameter: all_x
           group: all
           default_value: null
+        - parameter: all_accept
+          group: all
+          default_value: null
         - parameter: p_0
       outputs:
         - parameter: chain_seeds
@@ -55,6 +58,7 @@ template_components:
         - parameter: level_cov
         - parameter: pf
         - parameter: is_finished
+        - parameter: accept_rate
       actions:
         - script: <<script:uq/collate_results.py>>
           script_data_in:
@@ -77,6 +81,7 @@ template_components:
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
       actions:
         - script: <<script:uq/initialise_markov_chains.py>>
           script_data_in: direct
@@ -90,6 +95,7 @@ template_components:
     - objective: generate_next_state
       inputs:
         - parameter: x
+        - parameter: prop_std
       outputs:
         - parameter: x
       actions:
@@ -108,12 +114,14 @@ template_components:
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
         - parameter: threshold
       outputs:
         - parameter: x
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
       actions:
         - script: <<script:uq/increment_chain.py>>
           script_data_in: direct
@@ -144,7 +152,7 @@ tasks:
   - schema: sample_direct_MC
     inputs:
       dimension: 200
-    repeats: 1000 # num_samples
+    repeats: 100 # num_samples
   - schema: system_analysis_toy_model
     inputs:
       dimension: 200
@@ -159,9 +167,11 @@ tasks:
       - path: inputs.chain_index
         values::from_range:
           start: 0
-          stop: 100 # num_chains: num_samples * p_0
+          stop: 10 # num_chains: num_samples * p_0
           step: 1
   - schema: generate_next_state # [inner loop]
+    inputs:
+      prop_std: 0.5
   - schema: system_analysis_toy_model # [inner loop]
     inputs:
       dimension: 200
