--- a/matflow/data/workflows/subset_simulation_DAMASK.yaml
+++ b/matflow/data/workflows/subset_simulation_DAMASK.yaml
@@ -44,6 +44,9 @@ template_components:
         - parameter: all_x
           group: all
           default_value: null
+        - parameter: all_accept
+          group: all
+          default_value: null
         - parameter: p_0
       outputs:
         - parameter: chain_seeds
@@ -55,6 +58,7 @@ template_components:
         - parameter: level_cov
         - parameter: pf
         - parameter: is_finished
+        - parameter: accept_rate
       actions:
         - script: <<script:uq/collate_results.py>>
           script_data_in:
@@ -77,6 +81,7 @@ template_components:
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
       actions:
         - script: <<script:uq/initialise_markov_chains.py>>
           script_data_in: direct
@@ -90,6 +95,7 @@ template_components:
     - objective: generate_next_state
       inputs:
         - parameter: x
+        - parameter: prop_std
       outputs:
         - parameter: x
       actions:
@@ -108,12 +114,14 @@ template_components:
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
         - parameter: threshold
       outputs:
         - parameter: x
         - parameter: g
         - parameter: all_x
         - parameter: all_g
+        - parameter: all_accept
       actions:
         - script: <<script:uq/increment_chain.py>>
           script_data_in: direct
@@ -170,7 +178,17 @@ loops:
 
 resources:
   any:
+    scheduler_args:
+      options:
+        --time: 01:00:00
+        --partition: sapphire
     combine_scripts: true
+
+environments:
+  python_env:
+    poetry_env: true
+  damask_parse_env:
+    poetry_env: true
 
 meta_tasks:
   system_analysis:
@@ -260,6 +278,8 @@ tasks:
           stop: 10 # num_chains: num_samples * p_0
           step: 1
   - schema: generate_next_state # [inner loop]
+    inputs:
+      prop_std: 0.5
   - schema: system_analysis # [inner loop]
   - schema: increment_chain # [inner loop]
     groups:
