feat: add task to plot IPF with MTEX
feat: add tasks to import orientations from another workflow

fix: set MTEX tasks to require an execution directory

--- a/matflow/data/template_components/command_files.yaml
+++ b/matflow/data/template_components/command_files.yaml
@@ -26,7 +26,10 @@
 - label: mtex_pole_figures
   name:
     name: pole_figure.png
-- label: mtex_IPF_figure
+- label: mtex_inverse_pole_figures
+  name:
+    name: inverse_pole_figure.png
+- label: mtex_IPF_key
   name:
     name: IPF_key.png
 - label: dream_3D_pipeline
